# axum-playground

./: Cargo.toml
graphql/: queries.graphql
graphql/queries/: create_game.graphql
src/: api.rs  lib.rs  logging.rs  main.rs  sentry.rs  stripe.rs
src/games/: create_game.rs  list_games.rs  mod.rs
