[package]
name = "axum_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.4", features = ["headers"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.1", features = ["full"] }
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
eyre = "0.6.8"
async-stripe = { version = "0.14", features = ["runtime-tokio-hyper"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
headers = "0.3.7"
serde_json = "1.0.81"
sha2 = "0.10.2"
sha256 = "1.0.3"
hmac = "0.12.1"
graphql_client = { version = "0.10.0", features = ["reqwest", "reqwest-blocking"] }
reqwest = { version = "0.11.10", features = ["json"] }
chrono = "0.4.19"
sentry = { version = "0.25.0", features = ["anyhow"] }
anyhow = "1.0.57"